pass service URL in through flags

--- a/modd.conf
+++ b/modd.conf
@@ -1,7 +1,7 @@
-src/*.elm {
-	prep: make build
+src/*.elm index.html autocomplete.css {
+	prep: make dist
 }
 
-elm.js index.html autocomplete.css {
-       daemon: devd -oL .
+site/* {
+       daemon: devd -ol site
 }
